# Stellar-Engine

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/workflows/: ci.yml  codeql.yml
cmake/: CompilerWarnings.cmake  InterproceduralOptimization.cmake
includes/: App.hpp  CMakeLists.txt  World.hpp
includes/Core/: App.hpp  CMakeLists.txt  Core.hpp  SparseArray.hpp  World.hpp
includes/Core/Components/: Component.hpp  SparseArray.hpp
includes/Core/Events/: CMakeLists.txt  Event.hpp  EventHandler.hpp  EventsManager.hpp
includes/Core/Systems/: GenericSystem.hpp  System.hpp
scripts/: linux.sh
src/: CMakeLists.txt  Logger.hpp  Main.cpp  SparseArray.hpp  World.cpp  World.hpp
src/Clock/: CMakeLists.txt  Clock.cpp  Clock.hpp
src/Core/: World.cpp
test/: CMakeLists.txt  tests.cpp
